# pubmed-rag

./: .env.example  .gitignore  README.md  _note.md  docker-compose.microservice.yml  docker-compose.yml  statements.md  statements_jp.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/prompts/agents/: clinical_applicability.yaml  conflicting_findings.yaml  knowledge_graph.yaml  methodology_critic.yaml  retrieval.yaml  review_synthesizer.yaml  statistical_reviewer.yaml  summarization.yaml  trend_analysis.yaml
backend/prompts/guardrails/: input.yaml  output.yaml
backend/prompts/rag/: system.yaml
backend/prompts/retrieval/: query_expander.yaml  reranker.yaml
backend/prompts/transcribe/: document.yaml  image.yaml
backend/scripts/: build_mesh_db.py  ingest_bulk.py  run_evaluation.py  smoke_test.py
backend/src/: cli.py
backend/src/agents/: __init__.py  base.py  clinical_applicability.py  conflicting_findings.py  knowledge_graph.py  methodology_critic.py  pipeline.py  registry.py  retrieval.py  review_synthesizer.py  statistical_reviewer.py  summarization.py  trend_analysis.py
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/guardrails/: __init__.py  client.py  input.py  output.py
backend/src/ingestion/: __init__.py  chunker.py  embedder.py  export_collection.py  import_collection.py  loader.py  milvus_setup.py  pipeline.py
backend/src/rag/: __init__.py  chain.py  prompts.py
backend/src/retrieval/: __init__.py  client.py  query_expander.py  reranker.py  search.py
backend/src/search_service/: main.py
backend/src/shared/: __init__.py  config.py  llm.py  logging_config.py  mesh_db.py  models.py  prompt_loader.py
backend/tests/: conftest.py
backend/tests/eval/: conftest.py  dataset.json  test_rag_evaluation.py
backend/tests/integration/: test_milvus_connection.py
backend/tests/unit/: test_agent_clinical.py  test_agent_conflicting.py  test_agent_knowledge_graph.py  test_agent_methodology.py  test_agent_registry.py  test_agent_retrieval.py  test_agent_statistical.py  test_agent_summarization.py  test_agent_trend.py  test_api_analyze.py  test_api_ask.py  test_api_health.py  test_api_review.py  test_api_search.py  test_api_transcribe.py  test_chain.py  test_chunker.py  test_config.py  test_embedder.py  test_llm.py  (+18 more)
(+115 files in other folders)
