[project]
name = "pubmed-rag"
version = "0.1.0"
description = "PubMed RAG System - Medical research abstract retrieval and analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymilvus>=2.5.0",
    "litellm>=1.0",
    "langfuse>=2.0",
    "openai>=1.0",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "pyarrow>=15.0",
    "pymupdf>=1.24",
    "python-docx>=1.0",
    "python-json-logger>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
eval = [
    "deepeval>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
